--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "target": "es6",
+        "experimentalDecorators": true,
         "noImplicitAny": true,
         "moduleResolution": "node",
         "sourceMap": true,
