--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Playground to play",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "wp": "webpack",
+    "build": "tsc",
     "test": "jest",
     "docgen": "typedoc --entryPointStrategy expand ./src"
   },
